# hyperblockchain

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
backend/: config.py  pubsub.py
backend/app/: __init__.py  server.py
backend/blockchain/: block.py  block_validation_error.py  blockchain.py  errors.py
backend/blockchain/test/: test_block.py  test_blockchain.py
backend/scripts/: average_block_rate.py
backend/util/: convert.py  generate_port.py  generate_uuid.py  make_hash_sha256.py
backend/util/test/: test_convert.py  test_generate_port.py  test_make_hash_sha256.py
backend/wallet/: errors.py  transaction.py  wallet.py
backend/wallet/test/: test_transaction.py  test_wallet.py
