[tool.poetry]
name = "hyperblockchain"
version = "0.1.0"
description = ""
authors = ["inwisloklem <89099109104@mail.ru>"]

[tool.poetry.dependencies]
Flask = "^1.1.1"
cryptography = "^2.8"
pubnub = "^4.3.0"
pydash = "^4.7.6"
python = "^3.7"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
